services/personal-website/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-website-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
    nginx.ingress.kubernetes.io/proxy-buffers-number: '4'
    nginx.ingress.kubernetes.io/proxy-max-temp-file-size: 1024m
spec:
  tls:
  - hosts:
    - yhu.ch
    secretName: personal-website-tls
  rules:
    - host: "yhu.ch"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: personal-website-service
                port:
                  number: 80
